[package]
name = "rust-orbitdb-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_ipld_dagcbor = "0.6"
cid = "0.11"
multihash = "0.19"
sha2 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
hex = "0.4"
thiserror = "2"

[dev-dependencies]
serde_json = "1"
